tests/ui/consts/static-default-lifetime/static-trait-impl.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/static-trait-impl.rs:7:19
   |
LL |     const STATIC: &str = "";
   |                   ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a> Bar<'_> for A {
LL ~     const STATIC: &'a str = "";
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
